# cyber_ui

./: .bazelrc  .firebaserc  .gitignore  BUILD.bazel  LICENSE  README.md  SPONSORS.md  WORKSPACE  angular.json  cloudbuild.yaml  go.mod  go.sum  package.json  renovate.json  tsconfig.json  tslint.json
demo/: _variables.scss  data.ts  index.html  main.ts  polyfills.ts  styles.scss  test.ts  tsconfig.app.json
demo/add_thing_workflow/: component.html  component.ts  module.ts
demo/app/: app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  component.html  component.scss  component.spec.ts  component.ts  component_list.component.html  component_list.component.ts  example_form_model.ts  module.ts  settings.ts  sidenav.component.html  sidenav.component.scss  sidenav.component.ts
demo/app/sidenav/: component.html  component.ts
demo/capability_areas/: activity_suggestions.md  assistance.md  component.html  component.ts  gamification.md  module.ts  need_management.md  task_management.md
demo/data/: things.ts
demo/defs/: capability_areas.ts  colors.ts
demo/docs/releases/: component.html  component.ts  module.ts
demo/docs/task_providers/: component.html  module.ts
demo/form_fields/: component.html  component.spec.ts  component.ts  example_form_model.ts  example_help_dialog.component.ts  module.ts
demo/guides/: component.html  component.ts  markdown.d.ts  module.ts  style.md  systemization.md  task_representation.md  task_suggestion_services.md  task_suggestions.md  task_templates.md  theming.md  uncertainty_reduction.md  working_with_angular_material.md
demo/guides/attention_management/: component.html  component.scss  component.ts  module.ts
demo/guides/timeboxing/: component.html  component.scss  component.ts  module.ts
demo/interfaces/: component.html  component.ts  module.ts
demo/minimal_demo_theme/: footer.component.html  footer.component.ts  module.ts
demo/minimal_task_card/: component.html  component.scss  component.ts  module.ts
demo/minimal_task_display/: component.html  component.ts  module.ts
demo/splash_page/: component.html  component.scss  component.ts  module.ts
demo/task_providers/: component.html  component.ts
demo/task_suggestion_service/: demo_task_provider.ts  service.ts
demo/thing/: model.ts  schema.ts  service.ts
demo/work_on_tasks_workflow/: component.html  component.ts  module.ts
demo/workflow_settings_service/: service.ts
lib/: ng-package.json  ng-package.prod.json  package.json  public_api.ts  test.ts  tsconfig.lib.json  tslint.json
lib/action/: module.ts  service.ts
lib/action/context/: directive.ts
lib/action/defs/: action_context.ts  action_taken.ts
lib/activity/proto/: BUILD.bazel  activity_suggestion.proto  activity_suggestion_request.proto  activity_suggestion_response.proto  activity_suggestion_service.proto  get_activity_suggestion.proto
lib/attention/agenda/: attentional_agenda_item.ts  attentional_agenda_snapshot.spec.ts  attentional_agenda_snapshot.ts  service.spec.ts  service.ts
lib/attention/proto/: BUILD.bazel  focal_item.proto
lib/backends/fake/: model.service.ts  model.spec.ts  model.ts  module.ts
lib/backends/firestore/: backend.ts  data.interface.ts  model.ts  module.ts  options.ts  path_service.ts  service.spec.ts  service.ts
lib/backends/interfaces/: backend.ts  model.ts  model_service.ts  savable_model.ts  serializable_model.ts
lib/delegation/client/: BUILD.bazel  client.go
lib/delegation/delegation_menu/: component.html  component.spec.ts  component.ts  module.ts  (+4 more)
lib/delegation/proto/: BUILD.bazel  delegation.proto  delegation_request.proto  delegation_service.proto
lib/delegation/server/: BUILD.bazel  server.go
lib/form/: README.md  _mat_style_overrides_for_theme_service.scss  form_field.ts  form_field_config.spec.ts  form_field_config.ts  form_field_element.enum.ts
lib/forms_module/: form_field_element.enum.ts
lib/mood/proto/: BUILD.bazel  mood_component_weighting.proto  mood_state.proto
lib/need/: need.ts
lib/prediction/: predictable_thing.ts  prediction.ts
lib/settings/: constants.ts
lib/task/: module.ts  task_provider_registry.service.spec.ts  task_provider_registry.service.ts
lib/tasks_module/: module.ts
lib/theme/: module.ts  service.ts
lib/util/: dialog.config.ts  firebase_key_encode.spec.ts  firebase_key_encode.ts
lib/workflows/: README.md
scripts/: deploy_demo.sh  pre_commit_checks.sh  release.sh
ui/: package.json  public_api.ts
ui/forms_module/: README.md  form_field.ts  form_field_config.spec.ts  form_field_config.ts  module.ts
ui/interfaces/: task.ts  task_engine_settings.ts  task_provider.ts
ui/tasks_module/: module.ts  task_provider_registry.service.spec.ts  task_provider_registry.service.ts
(+341 files in other folders)
