load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "cyber_ui_attention_proto",
    srcs = [
        "focal_item.proto",
    ],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "cyber_ui_attention_go_proto",
    importpath = "cyber_ui/lib/attention/proto",
    proto = ":cyber_ui_attention_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":cyber_ui_attention_go_proto"],
    importpath = "cyber_ui/lib/attention/proto",
    visibility = ["//visibility:public"],
)
