load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "cyber_ui_delegation_proto",
    srcs = [
        "delegation.proto",
        "delegation_service.proto",
    ],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "cyber_ui_delegation_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "cyber_ui/lib/delegation/proto",
    proto = ":cyber_ui_delegation_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":cyber_ui_delegation_go_proto"],
    importpath = "cyber_ui/lib/delegation/proto",
    visibility = ["//visibility:public"],
)
